# surface_pathplanning

./: .gitignore  CMakeLists.txt  README.md  newbox.STL
src/: extract_indices.cpp  pc2path.cpp  pcl_stl_sample.cpp  viewer.cpp
